# vinci-train-node

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/Settings/: settings.py
app/clients/: etcd_client.py  rabbitMQClient.py  rabbitmq_client.py  redis_client.py
app/domains/train_model/controllers/: train_model.py
app/domains/train_model/schemas/: constants.py  stream_messages.py  train_job_instance.py  train_model.py  train_queue.py
app/domains/train_model/services/: train_model.py
app/logs/: CloudWatchLogHandler.py
app/settings/: settings.py
unity/behaviors/: Hallway.yml  RobotWave.yml  RobotWave_old.yml  wall_jump.yml
unity/unity_envs/0001/env_Data/: RuntimeInitializeOnLoads.json  ScriptingAssemblies.json  app.info  boot.config  globalgamemanagers  globalgamemanagers.assets  level0  sharedassets0.assets
unity/unity_envs/0001/env_Data/ML-Agents/Timers/: Academy_timers.json
unity/unity_envs/1/env_Data/: ScriptingAssemblies.json  boot.config  globalgamemanagers  globalgamemanagers.assets  level0  sharedassets0.assets
unity/unity_envs/1/env_Data/ML-Agents/Timers/: Academy_timers.json
